--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
   <link rel="stylesheet" href="theme.css">
   <title>Samstep - Home</title>
-  <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
+  <link rel="icon" href="/images/logo.png">
   <link rel="stylesheet" type="text/css" href="transition.css"/>
 </head>
 
