--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-2 mt-2 col-md-3" style=""><img class="ldt-bounce-in d-block rounded-circle img-fluid float-left" src="https://pbs.twimg.com/profile_images/1004998577490354176/B9bchwQa_400x400.jpg" width="200"></div>
+        <div class="col-2 mt-2 col-md-3" style=""><img class="ldt-bounce-in d-block rounded-circle img-fluid float-left" src="/images/logo.png" width="200"></div>
         <div class="ml-0 mt-0 col-sm-10 col-md-9" style="">
           <h1 class="display-1 ldt-fade-in">Welcome!</h1>
           <p class="ldt-fade-in">Hello, my name is <b>Samstep</b>. I enjoy making <b>Discord</b> <b>Bots</b> and fun <b>Minecraft</b> creations in my pass time!</p>
